--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,9 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 <!--        KO-->
-        <quarkus.version>3.28.0.CR1</quarkus.version>
+<!--        <quarkus.version>3.28.0.CR1</quarkus.version>-->
 <!--        OK-->
-<!--        <quarkus.version>3.27.0</quarkus.version>-->
+        <quarkus.version>3.27.0</quarkus.version>
         <surefire-plugin.version>3.5.4</surefire-plugin.version>
     </properties>
 
